fix padding on courses dropdown on mobile

--- a/src/AppBar/app-bar.less
+++ b/src/AppBar/app-bar.less
@@ -539,12 +539,6 @@
 
     a {
       padding: 13px 25px;
-
-      span {
-        // float: right;
-        // position: relative;
-        // top: 5px;
-      }
     }
   }
 
@@ -756,6 +750,12 @@
       .splash-nav-dropdown-padding {
         padding: 20px;
         margin: 10px;
+      }
+    }
+    .splash-nav-bootcamp-link {
+      display: none;
+      @media @nonmobile {
+        display: block;
       }
     }
   }
